--- a/palette.scss
+++ b/palette.scss
@@ -34,3 +34,12 @@ $color2: rgb(237, 242, 84);
 $color3: rgb(97, 232, 115);
 $color4: rgb(30, 99, 237);
 $color5: rgb(239, 112, 171);
+
+/*RGB*/
+$color1: #2A5D7E;
+$color2: #B49E3C;
+$color3: #993A33;
+$color4: #62CB9C;
+$color5: #8D81D5;
+$color6: #C9EAED;
+$color7: #CC9B66;
